message read API, store in tarantool
