# api/dialog/openapi.json
@@ -39,7 +39,14 @@
         },
         "responses": {
           "200": {
-            "description": "Успешно отправлено сообщение"
+            "description": "Успешно отправлено сообщение",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DialogMessageId"
+                }
+              }
+            }
           },
           "400": {
             "$ref": "#/components/responses/400"
@@ -86,6 +93,50 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/5xx"
+          },
+          "503": {
+            "$ref": "#/components/responses/5xx"
+          }
+        }
+      }
+    },
+    "/dialog/{user_id}/message/{message_id}/read": {
+      "put": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "user_id",
+            "schema": {
+              "$ref": "#/components/schemas/UserId"
+            },
+            "required": true,
+            "in": "path"
+          },
+          {
+            "name": "message_id",
+            "schema": {
+              "$ref": "#/components/schemas/DialogMessageId"
+            },
+            "required": true,
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Успешно изменено сообщение"
           },
           "400": {
             "$ref": "#/components/responses/400"
@@ -153,15 +204,27 @@
         "type": "string",
         "description": "Идентификатор пользователя"
       },
+      "DialogMessageId": {
+        "type": "string",
+        "description": "Идентификатор сообщения",
+        "example": "1d535fd6-7521-4cb1-aa6d-031be7123c4d"
+      },
       "DialogMessageText": {
         "type": "string",
         "description": "Текст сообщения",
         "example": "Привет, как дела?"
       },
+      "DialogMessageRead": {
+        "type": "boolean",
+        "description": "Сообщение прочитано"
+      },
       "DialogMessage": {
         "type": "object",
         "required": ["from", "to", "text"],
         "properties": {
+          "id": {
+            "$ref": "#/components/schemas/DialogMessageId"
+          },
           "from": {
             "$ref": "#/components/schemas/UserId"
           },
@@ -170,6 +233,9 @@
           },
           "text": {
             "$ref": "#/components/schemas/DialogMessageText"
+          },
+          "read": {
+            "$ref": "#/components/schemas/DialogMessageRead"
           }
         }
       }
