# generated/dialog/go_server/go/api_default_service.go
@@ -49,13 +49,36 @@ func (s *DefaultApiService) DialogUserIdListGet(ctx context.Context, userId stri
 	return Response(http.StatusNotImplemented, nil), errors.New("DialogUserIdListGet method not implemented")
 }
 
+// DialogUserIdMessageMessageIdReadPut - 
+func (s *DefaultApiService) DialogUserIdMessageMessageIdReadPut(ctx context.Context, userId string, messageId string) (ImplResponse, error) {
+	// TODO - update DialogUserIdMessageMessageIdReadPut with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(200, {}) or use other options such as http.Ok ...
+	//return Response(200, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(400, {}) or use other options such as http.Ok ...
+	//return Response(400, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(401, {}) or use other options such as http.Ok ...
+	//return Response(401, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(500, DialogUserIdSendPost500Response{}) or use other options such as http.Ok ...
+	//return Response(500, DialogUserIdSendPost500Response{}), nil
+
+	//TODO: Uncomment the next line to return response Response(503, DialogUserIdSendPost500Response{}) or use other options such as http.Ok ...
+	//return Response(503, DialogUserIdSendPost500Response{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("DialogUserIdMessageMessageIdReadPut method not implemented")
+}
+
 // DialogUserIdSendPost - 
 func (s *DefaultApiService) DialogUserIdSendPost(ctx context.Context, userId string, dialogUserIdSendPostRequest DialogUserIdSendPostRequest) (ImplResponse, error) {
 	// TODO - update DialogUserIdSendPost with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
-	//TODO: Uncomment the next line to return response Response(200, {}) or use other options such as http.Ok ...
-	//return Response(200, nil),nil
+	//TODO: Uncomment the next line to return response Response(200, string{}) or use other options such as http.Ok ...
+	//return Response(200, string{}), nil
 
 	//TODO: Uncomment the next line to return response Response(400, {}) or use other options such as http.Ok ...
 	//return Response(400, nil),nil
