# generated/dialog/go_server/go/authorize_routes.go
@@ -14,4 +14,9 @@ var AuthorizeRoutes = []struct {
 		Path:   "/dialog/{user_id}/list",
 		Method: "GET",
 	},
+
+	{
+		Path:   "/dialog/{user_id}/message/{message_id}/read",
+		Method: "PUT",
+	},
 }
